<resources>
    <string name="app_name">Cars Management App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    //MainActivity
    <string name="userLoadError">This user does not have data</string>
    <string name="signOut">Logout successful</string>

    //Repositories
    <string name="loadDatabaseError">Can not fetch data</string>


    //Login activity
    <string name="email_editText">Email</string>
    <string name="password_editText">Password</string>
    <string name="login_text">Login</string>
    <string name="signUp_text">"Don't have account"</string>
    <string name="e_enter_mail">Please enter a email</string>
    <string name="e_enter_valid_mail">Please enter valid email</string>
    <string name="e_enter_password">Please enter a password</string>
    <string name="e_login_fail">Login failed! Check email and password!</string>
    <string name="login_success">Successful login</string>
    <string name="net_err_title">No internet connection.</string>
    <string name="net_err_btn_ok">OK</string>


    //Register activity
    <string name="register_button">Register</string>
    <string name="e_password_requirements">Password must has minimum 6 characters</string>
    <string name="p_register_success">Registration successful</string>
    <string name="e_sign_up_fail">Sign Up failed. Try again.</string>

    <string name="sample_data">Sample data</string>
    <string name="name_editText">Name</string>
    <string name="e_enter_name">Please enter a name</string>
    <string name="surname_editText">Surname</string>
    <string name="e_enter_surname">Please enter a surname</string>
    <string name="passwordRepeat">Repeat password</string>
    <string name="e_repeatPassword">Passwords are not the same!</string>
    <string name="e_email_exists">Exists account with this email</string>
    <string name="addUser">Successful register and adding user</string>
    <string name="addUserError">Adding user failed</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>

    //fragment strings

    <string name="nav_statistic">Statistics</string>
    <string name="nav_prognosis">Prognosis</string>
    <string name="nav_cars">Cars</string>
    <string name="nav_addCar">Add Car</string>

    //fragment AddCar
    <string name="brandEditText">Brand</string>
    <string name="modelEditText">Model</string>
    <string name="capEditText">Cap.</string>
    <string name="powerEditText">Power</string>
    <string name="yearEditText">Year</string>
    <string name="colorEditText">Color</string>
    <string name="addCarButton">Add Car</string>
    <string name="doubleError">Capacity must be Double data</string>
    <string name="intError">Power must be Integer data</string>
    <string name="yearError">Year must be Integer data</string>
    <string name="error">Please enter valid data</string>
    <string name="brandError">Please enter a brand</string>
    <string name="modelError">Please enter a model</string>
    <string name="colorError">Please enter a color</string>
    <string name="capacityError">Capacity must be greater than zero</string>
    <string name="capacityError2">Capacity cannot be greater than 10.0</string>
    <string name="powerError">Power must be greater than zero</string>
    <string name="powerError2">Power cannot be greater than 1000</string>
    <string name="yearError1">Year must be greater than 1945</string>
    <string name="yearError2">Year cannot be greater than actual</string>
    <string name="carError">Please select car type</string>
    <string name="engineError">Please select engine type</string>
    <string name="add">Added car</string>
    <string name="addingFailed">Adding failed, try again</string>
    <string name="engineTypeError">Error engine type</string>
    <string name="carTypeError">Error car type</string>

    //Spinner strings
    <string-array name="engType">
        <item>DIESEL</item>
        <item>BENZINE</item>
        <item>LPG</item>
        <item>ELECTRIC</item>
        <item>HYBRID</item>
    </string-array>

    <string-array name="carType">
        <item>HETCHBACK</item>
        <item>SEDAN</item>
        <item>COMBI</item>
        <item>SUV</item>
        <item>CABRIOLET</item>
        <item>VAN</item>
        <item>PICKUP</item>
        <item>COUPE</item>
    </string-array>

    //Details activity
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year">Year of production</string>
    <string name="capacity">Capacity</string>
    <string name="power">Power</string>
    <string name="color">Color</string>
    <string name="carType">Car type</string>
    <string name="engType">Engine type</string>
    <string name="updateBtn">Update Car</string>
    <string name="update">Updated</string>
    <string name="deleteBtn">Delete Car</string>
    <string name="soldBtn">Sold Car</string>
    <string name="updateError">Car was solded or deleted</string>
    <string name="soldingSuccesful">Solding succesful</string>
    <string name="deletingSuccesful">Deleting succesful</string>
    <string name="soldingError">Solding error</string>
    <string name="deletingError">Deleting error</string>

    //Statistics Fragment
    <string name="carTypeTableMain">Number of cars sold and actualized by car type</string>
    <string name="carTypeTable">Car Type</string>
    <string name="actualCar">Actual Cars</string>
    <string name="soldCar">Sold Cars</string>

    <string name="engineTypeTableMain">Number of cars and actualized by engine type</string>
    <string name="engineTypeTable">Engine Type</string>

    <string name="hetchback">Hetchback</string>
    <string name="sedan">Sedan</string>
    <string name="combi">Combi</string>
    <string name="suv">SUV</string>
    <string name="cabriolet">Cabriolet</string>
    <string name="van">VAN</string>
    <string name="pickup">Pickup</string>
    <string name="coupe">Coupe</string>

    <string name="diesel">Diesel</string>
    <string name="benzine">Benzine</string>
    <string name="lpg">LPG</string>
    <string name="electric">Electric</string>
    <string name="hybrid">Hybrid</string>

    <string name="powerTV">Number of cars depending on power</string>

    //Prognosis fragment
    <string name="compareBtn">Compare</string>
    <string name="compareEror">Please select two cars to compare</string>
    <string name="chooseCars">Selected two cars. Uncheck one of them and check other or compare them.</string>
    <string name="prognosisResult">Car comparison:</string>
    <string name="prognosisCarDetails">Car details:</string>


    //UpdateActivity
    <string name="updateSuccessful">Update successful</string>
    <string name="errorUpdate">Update error</string>
    <string name="carFindError">Does not have this car</string>
    <string name="carLoadError">Load car error</string>

    //ColorPicker
    <string name="colorpicker_header">Choose a color</string>
    <string name="colorpicker_accept">Accept</string>
    <string name="colorpicker_decline">Decline</string>





</resources>