<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">



    <EditText
        android:id="@+id/name_register_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/name_editText"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/surname_register_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_register_editText"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/surname_editText"
        android:inputType="text" />

    <EditText
        android:id="@+id/email_register_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surname_register_editText"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/email_editText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_register_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_register_editText"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/password_editText"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/passwordRepeat_register_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_register_editText"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/passwordRepeat"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordRepeat_register_editText"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="140dp"
        android:layout_marginStart="140dp"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/register_button"
        tools:text="@string/register_button" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>


</RelativeLayout>