<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.cars.CarsFragment"
    android:background="@drawable/background_gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/grey2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/brandHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/brand"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/modelHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/model"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/yearHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_weight="1"
        android:id="@+id/recyclerAllCars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>